--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "9.0.0",
     "mongoose": "^6.5.3"
   },
   "devDependencies": {
